# chibi-diary-wellbeing-companion

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  WRITEUP.md  WRITEUP_VI.md  agents-cli-manifest.yaml  cloudbuild.yaml  deploy.sh  pyproject.toml
app/: __init__.py  orchestrator.py
app/agents/: __init__.py  capture_agent.py  chibi_illustrator_agent.py  memory_agent.py  mood_analysis_agent.py
app/memory/: __init__.py  long_term_memory.py  session_memory.py
app/tools/: __init__.py  placeholder_tools.py
chibi_diary/: __init__.py  eval_set_1.evalset.json  orchestrator.py
chibi_diary/.adk/artifacts/users/user/sessions/39cff0ee-06b8-4963-af59-f69c1f98ca24/artifacts/chibi_today.png/versions/0/: metadata.json
chibi_diary/agents/: __init__.py  capture_agent.py  chibi_illustrator_agent.py  memory_agent.py  mood_analysis_agent.py
chibi_diary/memory/: __init__.py  eval_set_1.evalset.json  long_term_memory.py  session_memory.py
chibi_diary/skills/wellbeing/: SKILL.md
chibi_diary/tools/: __init__.py  placeholder_tools.py
mcp_server/: __init__.py  chibi_mcp_server.py  imagen_client.py
tests/: __init__.py  eval_report.json  test_evaluation.py  test_mcp_server.py  test_orchestrator.py  test_security.py
