[project]
name = "chibi-diary"
version = "0.1.0"
description = "Chibi Diary & Wellbeing Companion — AI diary agent with mood analysis and chibi-art generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC-BY-4.0" }

dependencies = [
    # Google ADK — the core agent framework (SequentialAgent + McpToolset)
    "google-adk>=2.0.0",
    # Google GenAI SDK — used directly by ImagenClient for Imagen 3
    "google-genai>=0.8.0",
    # Load .env files for credentials (never hardcode!)
    "python-dotenv>=1.0.0",
    # Async SQLite for long-term diary storage
    "aiosqlite>=0.20.0",
    # FastAPI for optional REST API layer (Day 2+)
    "fastapi>=0.115.0",
    # ASGI server for FastAPI
    "uvicorn[standard]>=0.30.0",
    # Data validation and structured output schemas
    "pydantic>=2.7.0",
    # MCP Python SDK — for building and connecting to MCP servers
    "mcp[cli]>=1.3.0",
    # Vertex AI — Imagen 3 image generation
    "google-cloud-aiplatform[preview]>=1.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chibi_diary", "mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
